# gretl

./: CMakeLists.txt  README.md
scripts/: check_for_missing_headers.py
scripts/github-actions/: linux-check.sh
src/: double_state.hpp
src/gretl/: CMakeLists.txt  about.hpp  checkpoint.hpp  checkpoint_strategy.hpp  create_state.hpp  data_store.cpp  data_store.hpp  online_r2_checkpoint_strategy.cpp  online_r2_checkpoint_strategy.hpp  state.hpp  state_base.cpp  state_base.hpp
src/tests/: CMakeLists.txt  test_gretl_checkpoint.cpp  test_gretl_checkpoint_compare.cpp  test_gretl_robustness.cpp  test_tracking_disable.cpp
tests/: CMakeLists.txt  test_gretl_checkpoint.cpp  test_gretl_dynamics.cpp  test_gretl_graph.cpp
